SAIIASA-32 comparison functionality

--- a/science/notebooks/data_formats.ipynb
+++ b/science/notebooks/data_formats.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-06T08:17:15.655153Z",
-     "start_time": "2025-08-06T08:17:15.526747Z"
+     "end_time": "2025-08-07T10:21:36.557030Z",
+     "start_time": "2025-08-07T10:21:36.133354Z"
     }
    },
    "source": [
@@ -20,8 +20,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-06T08:17:18.085021Z",
-     "start_time": "2025-08-06T08:17:15.670195Z"
+     "end_time": "2025-08-07T10:21:39.453487Z",
+     "start_time": "2025-08-07T10:21:37.384754Z"
     }
    },
    "source": [
@@ -42,9 +42,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WARNING] 11:17:17 - pint.util: Redefining 'kt' (<class 'pint.delegates.txt_defparser.plain.UnitDefinition'>)\n",
-      "[WARNING] 11:17:17 - pint.util: Redefining 'EUR_2005' (<class 'pint.delegates.txt_defparser.plain.UnitDefinition'>)\n",
-      "[WARNING] 11:17:17 - pint.util: Redefining 'EUR' (<class 'pint.delegates.txt_defparser.plain.UnitDefinition'>)\n"
+      "[WARNING] 12:21:38 - pint.util: Redefining 'kt' (<class 'pint.delegates.txt_defparser.plain.UnitDefinition'>)\n",
+      "[WARNING] 12:21:38 - pint.util: Redefining 'EUR_2005' (<class 'pint.delegates.txt_defparser.plain.UnitDefinition'>)\n",
+      "[WARNING] 12:21:38 - pint.util: Redefining 'EUR' (<class 'pint.delegates.txt_defparser.plain.UnitDefinition'>)\n"
      ]
     }
    ],
@@ -54,8 +54,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-06T08:17:20.644365Z",
-     "start_time": "2025-08-06T08:17:18.092795Z"
+     "end_time": "2025-08-07T10:21:42.643805Z",
+     "start_time": "2025-08-07T10:21:40.866297Z"
     }
    },
    "source": "client = IIASABaseAPIClient()",
@@ -1242,14 +1242,14 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-06T08:17:40.522004Z",
-     "start_time": "2025-08-06T08:17:38.742678Z"
+     "end_time": "2025-08-07T10:21:52.405511Z",
+     "start_time": "2025-08-07T10:21:49.803262Z"
     }
    },
    "source": [
     "meta = create_df_from_api_response(client.get_data(\n",
     "    \"meta/\",\n",
-    "    params={\"table\": \"True\", \"join_parameters\": \"true\", \"join_runs\": \"true\"}\n",
+    "    params={\"table\": \"True\", \"join_parameters\": \"true\", \"join_runs\": \"true\", \"limit\": 100000}\n",
     "))\n",
     "meta"
    ],
@@ -1257,33 +1257,33 @@
     {
      "data": {
       "text/plain": [
-       "       run__id                                                key     id  \\\n",
-       "0            1                                            Project      1   \n",
-       "1            1                   Scientific Manuscript (Citation)      2   \n",
-       "2            1                        Scientific Manuscript (DOI)      3   \n",
-       "3            1                                  Data Source (DOI)      4   \n",
-       "4            2                                            Project      5   \n",
-       "...        ...                                                ...    ...   \n",
-       "49995     1011  Climate Assessment|Year of Peak Warming|67th P...  84278   \n",
-       "49996     1011  Climate Assessment|Year of Peak Warming|75th P...  84279   \n",
-       "49997     1011  Climate Assessment|Year of Peak Warming|83th P...  84280   \n",
-       "49998     1011  Climate Assessment|Year of Peak Warming|90th P...  84281   \n",
-       "49999     1011  Climate Assessment|Year of Peak Warming|95th P...  84282   \n",
+       "       run__id                                          key      id  \\\n",
+       "0            1                                      Project       1   \n",
+       "1            1             Scientific Manuscript (Citation)       2   \n",
+       "2            1                  Scientific Manuscript (DOI)       3   \n",
+       "3            1                            Data Source (DOI)       4   \n",
+       "4            2                                      Project       5   \n",
+       "...        ...                                          ...     ...   \n",
+       "70054     1204           Climate Assessment|Category [Name]  116035   \n",
+       "70055     1204  Climate Assessment|Processing|Harmonization  116036   \n",
+       "70056     1204      Climate Assessment|Processing|Infilling  116037   \n",
+       "70057     1204         Climate Assessment|Processing|Runner  116038   \n",
+       "70058     1204        Climate Assessment|Processing|Package  116039   \n",
        "\n",
-       "                            value type  \n",
-       "0                    H2020 ENGAGE  STR  \n",
-       "1             Riahi et al. (2021)  STR  \n",
-       "2      10.1038/s41558-021-01215-2  STR  \n",
-       "3          10.5281/zenodo.5553976  STR  \n",
-       "4                    H2020 ENGAGE  STR  \n",
-       "...                           ...  ...  \n",
-       "49995                      2069.0  INT  \n",
-       "49996                      2070.0  INT  \n",
-       "49997                      2082.0  INT  \n",
-       "49998                      2093.0  INT  \n",
-       "49999                      2093.0  INT  \n",
+       "                                       value type  \n",
+       "0                               H2020 ENGAGE  STR  \n",
+       "1                        Riahi et al. (2021)  STR  \n",
+       "2                 10.1038/s41558-021-01215-2  STR  \n",
+       "3                     10.5281/zenodo.5553976  STR  \n",
+       "4                               H2020 ENGAGE  STR  \n",
+       "...                                      ...  ...  \n",
+       "70054                        C8: Above 4.0°C  STR  \n",
+       "70055                aneris (version: 0.3.1)  STR  \n",
+       "70056              silicone (version: 1.3.0)  STR  \n",
+       "70057       openscm_runner (version: 0.12.1)  STR  \n",
+       "70058  climate-assessment (version: 0.1.4a0)  STR  \n",
        "\n",
-       "[50000 rows x 5 columns]"
+       "[70059 rows x 5 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -1361,57 +1361,57 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49995</th>\n",
-       "      <td>1011</td>\n",
-       "      <td>Climate Assessment|Year of Peak Warming|67th P...</td>\n",
-       "      <td>84278</td>\n",
-       "      <td>2069.0</td>\n",
-       "      <td>INT</td>\n",
+       "      <th>70054</th>\n",
+       "      <td>1204</td>\n",
+       "      <td>Climate Assessment|Category [Name]</td>\n",
+       "      <td>116035</td>\n",
+       "      <td>C8: Above 4.0°C</td>\n",
+       "      <td>STR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49996</th>\n",
-       "      <td>1011</td>\n",
-       "      <td>Climate Assessment|Year of Peak Warming|75th P...</td>\n",
-       "      <td>84279</td>\n",
-       "      <td>2070.0</td>\n",
-       "      <td>INT</td>\n",
+       "      <th>70055</th>\n",
+       "      <td>1204</td>\n",
+       "      <td>Climate Assessment|Processing|Harmonization</td>\n",
+       "      <td>116036</td>\n",
+       "      <td>aneris (version: 0.3.1)</td>\n",
+       "      <td>STR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49997</th>\n",
-       "      <td>1011</td>\n",
-       "      <td>Climate Assessment|Year of Peak Warming|83th P...</td>\n",
-       "      <td>84280</td>\n",
-       "      <td>2082.0</td>\n",
-       "      <td>INT</td>\n",
+       "      <th>70056</th>\n",
+       "      <td>1204</td>\n",
+       "      <td>Climate Assessment|Processing|Infilling</td>\n",
+       "      <td>116037</td>\n",
+       "      <td>silicone (version: 1.3.0)</td>\n",
+       "      <td>STR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49998</th>\n",
-       "      <td>1011</td>\n",
-       "      <td>Climate Assessment|Year of Peak Warming|90th P...</td>\n",
-       "      <td>84281</td>\n",
-       "      <td>2093.0</td>\n",
-       "      <td>INT</td>\n",
+       "      <th>70057</th>\n",
+       "      <td>1204</td>\n",
+       "      <td>Climate Assessment|Processing|Runner</td>\n",
+       "      <td>116038</td>\n",
+       "      <td>openscm_runner (version: 0.12.1)</td>\n",
+       "      <td>STR</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>49999</th>\n",
-       "      <td>1011</td>\n",
-       "      <td>Climate Assessment|Year of Peak Warming|95th P...</td>\n",
-       "      <td>84282</td>\n",
-       "      <td>2093.0</td>\n",
-       "      <td>INT</td>\n",
+       "      <th>70058</th>\n",
+       "      <td>1204</td>\n",
+       "      <td>Climate Assessment|Processing|Package</td>\n",
+       "      <td>116039</td>\n",
+       "      <td>climate-assessment (version: 0.1.4a0)</td>\n",
+       "      <td>STR</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>50000 rows × 5 columns</p>\n",
+       "<p>70059 rows × 5 columns</p>\n",
        "</div>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 5
   },
   {
    "metadata": {
